feat(analytics): get metrics order
