# src/features/analytics/analytics.controller.ts
@@ -1,0 +1,17 @@
+import { AdminAuthGuard } from '@features/auth-admin/guards';
+import { Controller, Get, UseGuards } from '@nestjs/common';
+import { ApiOperation, ApiTags } from '@nestjs/swagger';
+import { AnalyticsService } from './analytics.service';
+
+@ApiTags('Analytics')
+@Controller('analytics')
+@UseGuards(AdminAuthGuard)
+export class AnalyticsController {
+  constructor(private readonly analyticsService: AnalyticsService) {}
+
+  @ApiOperation({ summary: 'Get analytics' })
+  @Get('order')
+  async getOrderAnalytics() {
+    return this.analyticsService.getOrders();
+  }
+}
